--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@sentry/nextjs": "^10.26.0",
     "@tanstack/react-query": "^5.90.10",
     "@trpc/client": "^11.7.1",
     "@trpc/next": "^11.7.1",
@@ -42,12 +43,14 @@
     "moment-jalaali": "^0.10.4",
     "next": "15.0.3",
     "next-auth": "^4.24.13",
+    "node-fetch": "^3.3.2",
     "pdfmake": "^0.2.20",
     "pg": "^8.16.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "superjson": "^2.2.5",
     "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
