--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@heroicons/react": "^2.2.0",
     "@prisma/adapter-pg": "6.0.0",
     "@prisma/client": "6.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
